<resources>
    <string name="app_name" translatable="false">WraithLED</string>
    <string name="menuHeader" translatable="false">Wraith LED</string>

    <string name="nav_drawer_open">Открыть</string>
    <string name="nav_drawer_close">Закрыть</string>
    <string name="turnOff">Выключить</string>
    <string name="toFavourites">В избранное</string>

    <string name="timer">Таймер</string>
    <string name="timerInfo">Подсветка будет автоматически включена/отключена когда таймер завершится</string>
    <string name="startTimer">Старт</string>
    <string name="stopTimer">Остановить</string>
    <string name="timerCanceled">Таймер был остановлен</string>
    <string name="timerCreated">Таймер был установлен</string>

    <string name="favourites">Избранное</string>
    <string name="clearFavourites">Очистить список</string>
    <string name="favouritesInfo">У Вас пока ещё нет\nизбранных настроек</string>

    <string name="favouritesHint">Сохранить текущее\nсостояние в избранное</string>
    <string name="favouritesInputHint">Название</string>
    <string name="save">СОХРАНИТЬ</string>

    <string name="mode">Режим</string>
    <string name="sunsetImage">Рассвет</string>
    <string name="sunset">Рассвет</string>
    <string name="temperature">Температура:</string>
    <string name="kelvinsScale">Шкала Кельвина</string>
    <string name="pointer">Указатель</string>
    <string name="brightness">Яркость</string>
    <string name="timerText">Осталось <font color="#FFC859">%1$d</font> мин.</string>
    <string name="menuHome">Главная</string>
    <string name="menuModes">Режимы</string>
    <string name="menuTemperature">Кельвины</string>
    <string name="menuColor">Цвет</string>
    <string name="menuThread">Поток</string>
    <string name="menuTimer">Таймер</string>
    <string name="menuShedules">Расписания</string>
    <string name="menuScenarious">Сценарии</string>
    <string name="menuFavourites">Избранное</string>
    <string name="color">Цвет:</string>
    <string name="preview">Текущий</string>
    <string name="noConnectionText">Нет подключения к RGB ленте</string>
    <string name="noConnectionUpdate">Обновить</string>
    <string name="saveFavErr">Невозможно сохранить текущее состояние пока лента выключена</string>
    <string name="saveFavErrLen">Минимальная длина названия - 1 символ</string>
    <string name="modeOn">Установлен режим: </string>

    <string name="home">Главная</string>
    <string name="homeInfo">Состояние подсветки</string>

    <string name="mood1">Рассвет</string>
    <string name="mood2">Закат</string>
    <string name="mood3">Ночник</string>
    <string name="mood4">Кино</string>
    <string name="mood5">Камин</string>
    <string name="mood6">Horny</string>
    <string name="mood7">Снег</string>
    <string name="mood8">Гроза</string>

    <string name="error">Ошибка</string>
    <string name="threadInfo">Установите 4 цвета и они будут плавно менятся между собою</string>

</resources>