<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ThreadFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="84dp"
            android:fontFamily="@font/arial_bold"
            android:text="@string/menuThread"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/threadInfo"
            android:textAlignment="center"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            tools:ignore="TextContrastCheck" />

        <FrameLayout
            android:id="@+id/firstColor"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_gravity="center"
            android:layout_marginStart="24dp"
            android:layout_marginTop="100dp"
            android:background="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <FrameLayout
            android:id="@+id/secondColor"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_gravity="center"
            android:layout_marginStart="28dp"
            android:layout_marginTop="100dp"
            android:background="@drawable/thread_circle"
            app:layout_constraintStart_toEndOf="@+id/firstColor"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <FrameLayout
            android:id="@+id/thirdColor"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_gravity="center"
            android:layout_marginStart="28dp"
            android:layout_marginTop="100dp"
            android:background="@drawable/thread_circle"
            app:layout_constraintStart_toEndOf="@+id/secondColor"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <FrameLayout
            android:id="@+id/fourdColor"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_gravity="center"
            android:layout_marginStart="28dp"
            android:layout_marginTop="100dp"
            android:background="@drawable/thread_circle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.117"
            app:layout_constraintStart_toEndOf="@+id/thirdColor"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <RelativeLayout
            android:layout_width="413dp"
            android:layout_height="135dp"
            android:layout_marginTop="168dp"
            android:background="@drawable/brightness_shape"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/thirdColor"
            app:layout_constraintVertical_bias="0.0">

            <ImageView
                android:id="@+id/smoothIcon"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="33dp"
                android:layout_marginTop="15dp"
                android:contentDescription="@string/brightness"
                android:src="@drawable/smooth_icon" />

            <SeekBar
                android:id="@+id/smoothBar"
                style="@style/BrightnessSeekBar"
                android:layout_width="345dp"
                android:layout_height="58dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="7dp"
                android:layout_marginTop="1dp"
                android:layout_marginEnd="0dp"
                android:layout_toEndOf="@+id/smoothIcon"
                android:max="255" />

            <ImageView
                android:id="@+id/speedIcon"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_below="@+id/smoothIcon"
                android:layout_alignParentStart="true"
                android:layout_marginStart="33dp"
                android:layout_marginTop="38dp"
                android:contentDescription="@string/brightness"
                android:src="@drawable/timer_icon" />

            <SeekBar
                android:id="@+id/speedBar"
                style="@style/BrightnessSeekBar"
                android:layout_width="345dp"
                android:layout_height="58dp"
                android:layout_below="@+id/smoothBar"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="9dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="-3dp"
                android:layout_toEndOf="@+id/speedIcon"
                android:max="255" />

        </RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>